Fixed footer misalignment in Contact Me

--- a/pages/contactme/contactme.css
+++ b/pages/contactme/contactme.css
@@ -76,9 +76,10 @@ p {
 	text-align: center;
 }
 
-.copyright{
+.copyright footer{
 	position: fixed;
-	width: 100%;
+	left: 0%;
 	bottom: 0%;
+	width: 100%;
 	text-align: center;
 }
